examples/LINUX/tests/errors/round-parent-missing.biplan
// Round parentheses check, this program missing a right round parenthesis.
// Compiler should return "non matching ()" error

print (a + b

stop